--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-
 # --------------------------------------------
 # App
 # --------------------------------------------
-spring.application.name=automatch
-server.port=${PORT:8080}
+spring.application.name=iam-service
+server.port=${PORT:8081}
 
 # --------------------------------------------
 # DataSource (MySQL local)
@@ -22,56 +21,61 @@ spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # --------------------------------------------
-# OpenAPI / Swagger
+# Eureka / Discovery (ON)
+#  -> Debe coincidir con el Gateway: lb://iam-service
 # --------------------------------------------
-springdoc.api-docs.path=/v3/api-docs
-
-
-
-# --------------------------------------------
-# Spring Cloud Config (off en local)
-# --------------------------------------------
-spring.cloud.config.enabled=false
-
-# --------------------------------------------
-# Docker Compose auto support (off)
-# --------------------------------------------
-spring.docker.compose.enabled=false
+spring.cloud.discovery.enabled=true
+spring.cloud.loadbalancer.enabled=true
+eureka.client.enabled=true
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=${EUREKA_SERVER_URL:http://localhost:8761/eureka}
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id=${spring.application.name}:${random.value}
 
 # --------------------------------------------
-# JWT
+# Actuator (para healthcheck de Eureka)
 # --------------------------------------------
-authorization.jwt.secret=WriteHereYourSecretStringForTokenSigningCredentials
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.probes.enabled=true
+management.info.os.enabled=true
 
-#7645655f-28a4-309d-80ce-762a66fe3050
+# Información de la app
+info.app.name=${spring.application.name}
+info.app.description=Servicio ${spring.application.name} de AutoMatch
+info.app.owner=Equipo AutoMatch
+
+
+# --------------------------------------------
+# JWT (mejor ponerlo como variable de entorno en prod)
+# --------------------------------------------
+authorization.jwt.secret=${IAM_JWT_SECRET:WriteHereYourSecretStringForTokenSigningCredentials}
 authorization.jwt.expiration.days=7
 
 # --------------------------------------------
-# Desactivar Eureka / Service Discovery en local
+# Config / Docker compose (OFF local)
 # --------------------------------------------
-spring.cloud.discovery.enabled=false
-eureka.client.enabled=false
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-management.health.eureka.enabled=false
-spring.cloud.loadbalancer.enabled=false
+spring.cloud.config.enabled=false
+spring.docker.compose.enabled=false
 
 # --------------------------------------------
-# (Opcional) Ejemplos de Eureka si lo necesitas en otros entornos
-# (dejar comentado en local)
-# --------------------------------------------
-# eureka.instance.instance-id=${spring.application.name}:${random.value}
-# eureka.instance.prefer-ip-address=true
-# eureka.client.service-url.defaultZone=${EUREKA_SERVER_URL:http://localhost:8761/eureka}
-
-# --------------------------------------------
-# Metadata provenance del build (Maven)
+# Metadata (Maven)
 # --------------------------------------------
 documentation.application.description=@project.description@
 documentation.application.version=@project.version@
 
-
-# ------ OpenAPI / Swagger ------
-# Deja el endpoint estándar de docs
-# Ruta cómoda para la UI (ej: /docs)
+# --------------------------------------------
+# OpenAPI / Swagger
+# --------------------------------------------
+springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/docs
+
+# --------------------------------------------
+# OpenAPI / Swagger
+#  (dejamos el JSON en /api/v1/authentication/v3/api-docs
+#   y la UI en /api/v1/authentication/docs para que el Gateway la apunte tal como configuraste)
+# --------------------------------------------
+#springdoc.api-docs.path=/api/v1/authentication/v3/api-docs
+#springdoc.swagger-ui.path=/api/v1/authentication/docs
+
+
