--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@ server.port=${PORT:8081}
 # --------------------------------------------
 # DataSource (MySQL local)
 # --------------------------------------------
-spring.datasource.url=jdbc:mysql://${MYSQL_IAM_HOST:localhost}:${MYSQL_IAM_PORT:3306}/automatch?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=${MYSQL_IAM_USERNAME:root}
-spring.datasource.password=${MYSQL_IAM_PASSWORD:nicolas20}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://${POSTGRES_IAM_HOST:localhost}:${POSTGRES_IAM_PORT:5432}/${POSTGRES_IAM_DB:automatch_iam}
+spring.datasource.username=${POSTGRES_IAM_USERNAME:postgres}
+spring.datasource.password=${POSTGRES_IAM_PASSWORD:12345}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # --------------------------------------------
 # JPA / Hibernate
@@ -18,7 +18,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# Recomendados en Postgres:
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.format_sql=true
+
 
 # --------------------------------------------
 # Eureka / Discovery (ON)
