--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -83,3 +83,6 @@ springdoc.swagger-ui.path=/docs
 #springdoc.swagger-ui.path=/api/v1/authentication/docs
 
 
+# Timeouts Feign/HTTP
+feign.client.config.default.connectTimeout=2000
+feign.client.config.default.readTimeout=3000
