--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -86,3 +86,13 @@ springdoc.swagger-ui.path=/docs
 # Timeouts Feign/HTTP
 feign.client.config.default.connectTimeout=2000
 feign.client.config.default.readTimeout=3000
+
+# --------------------------------------------
+# Kafka
+# --------------------------------------------
+
+spring.kafka.bootstrap-servers=localhost:9092
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.add.type.headers=false
